# remote-file-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.kiro/specs/ssh-remote-file-browser/: .config.kiro  design.md  requirements.md  tasks.md
docs/: architecture-summary.md  kafka-logs.md
proptest-regressions/operations/: listing.txt
src/: app.rs  config.rs  event.rs  main.rs  ssh.rs  types.rs
src/operations/: download.rs  listing.rs  mod.rs  navigate.rs  search.rs
src/ui/: browser.rs  footer.rs  header.rs  mod.rs  navigate_prompt.rs  path_prompt.rs  search_prompt.rs
