[package]
name = "kafka-terminal"
version = "0.1.0"
description = "terminal for extracting files from kafka ec2 instance"
authors = ["morrisli"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
ssh2 = "0.9"
tempfile = "3.10"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
